--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -29,22 +33,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto text-uppercase">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">services</a>
+          <a class="nav-link" href="#">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">about us</a>
+          <a class="nav-link" href="#">service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">connect</a>
+          <a class="nav-link" href="#">blogs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">slow</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">aray</a>
+          <a class="nav-link" href="#">contact us</a>
         </li>
       </ul>
     </div>
@@ -86,8 +87,7 @@
         </div>
       </div>
 
-      <button class="carousel-control-prev" type="button" data-target="#homePageSlider"
-        data-slide="prev">
+      <button class="carousel-control-prev" type="button" data-target="#homePageSlider" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </button>
@@ -100,7 +100,40 @@
 
   </section>
 
+  <section class="iconsInfo py-5">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <div class="iconsThumbnail mb-4 mb-md-0">
+            <i class="fa-solid fa-gear fa-3x"></i>
+            <h3 class="text-capitalize my-2">turning gears</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="iconsThumbnail mb-4 mb-md-0">
+            <i class="fa-solid fa-cloud fa-3x"></i>
+            <h3 class="text-capitalize my-2">turning gears</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="iconsThumbnail mb-4 mb-md-0">
+            <i class="fa-solid fa-cart-plus fa-3x"></i>
+            <h3 class="text-capitalize my-2">turning gears</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="">
+
+  </section>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
