--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -131,9 +131,20 @@
     </div>
   </section>
 
-  <section class="">
-
+  <section class="mainParallax py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center text-white">
+          <h4 class="text-capitalize">are you ready to get started interviews</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora expedita repudiandae itaque minima
+            architecto perferendis harum ipsum numquam ut? Exercitationem eius soluta doloribus facilis eligendi nulla,
+            nesciunt delectus distinctio ipsa!</p>
+        </div>
+      </div>
+    </div>
   </section>
+
+  
 
   <!-- Optional JavaScript; choose one of the two! -->
 
