--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center text-white">
-          <h4 class="text-capitalize">are you ready to get started interviews</h4>
+          <h3 class="text-capitalize">are you ready to get started interviews</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora expedita repudiandae itaque minima
             architecto perferendis harum ipsum numquam ut? Exercitationem eius soluta doloribus facilis eligendi nulla,
             nesciunt delectus distinctio ipsa!</p>
@@ -144,7 +144,22 @@
     </div>
   </section>
 
-  
+  <section class="laptopInfo py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-7">
+          <h3>laptop Information</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam atque non sapiente libero,
+            dolore quasi voluptatibus ad blanditiis facilis ea voluptate accusantium, aliquam, minus voluptas officia
+            alias.</p>
+          <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize">learn more</a>  
+        </div>
+        <div class="col-md-5">
+          <img src="./assets/images/laptop.png" class="img-fluid" alt="laptop image" title="laptop image">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
