work on image gallary

--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
+    integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>Bootstrap 4</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fkNavbar">
     <a class="navbar-brand" href="index.html">
       <img
@@ -104,7 +109,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-4">
-          <div class="iconsThumbnail mb-4 mb-md-0">
+          <div class="iconsThumbnail mb-5 mb-md-0">
             <i class="fa-solid fa-gear fa-3x"></i>
             <h3 class="text-capitalize my-2">turning gears</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
@@ -112,7 +117,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="iconsThumbnail mb-4 mb-md-0">
+          <div class="iconsThumbnail mb-5 mb-md-0">
             <i class="fa-solid fa-cloud fa-3x"></i>
             <h3 class="text-capitalize my-2">turning gears</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
@@ -120,7 +125,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="iconsThumbnail mb-4 mb-md-0">
+          <div class="iconsThumbnail mb-5 mb-md-0">
             <i class="fa-solid fa-cart-plus fa-3x"></i>
             <h3 class="text-capitalize my-2">turning gears</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta tempore qui itaque voluptas sed odio
@@ -152,7 +157,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam atque non sapiente libero,
             dolore quasi voluptatibus ad blanditiis facilis ea voluptate accusantium, aliquam, minus voluptas officia
             alias.</p>
-          <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize">learn more</a>  
+          <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize">learn more</a>
         </div>
         <div class="col-md-5">
           <img src="./assets/images/laptop.png" class="img-fluid" alt="laptop image" title="laptop image">
@@ -161,16 +166,72 @@
     </div>
   </section>
 
+  <section class="videoInfo">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 py-5 text-center">
+          <a href="javascript:;">
+            <i class="fa-solid fa-play fa-3x py-3 text-white"></i>
+          </a>
+          <h3 class="text-capitalize text-white">are you ready to get started interviews</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="imgGallary py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?nature/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?nature/560*560" alt="nature" title="nature">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?home/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?home/560*560" alt="home" title="home">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?laptop/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?laptop/560*560" alt="laptop" title="laptop">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?birds/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?birds/560*560" alt="birds" title="birds">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?bussiness/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?bussiness/560*560" alt="bussiness" title="bussiness">
+          </a>
+        </div>
+        <div class="col-md-4 mb-4">
+          <a href="https://source.unsplash.com/random/?city/560*560" class="img-fluid" data-lightbox="imgGallary">
+            <img src="https://source.unsplash.com/random/?city/560*560" alt="city" title="city">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+
+
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js"
+    integrity="sha512-U9dKDqsXAE11UA9kZ0XKFyZ2gQCj+3AwZdBMni7yXSvWqLFEj8C1s7wRmWl9iyij8d5zb4wm56j4z/JVEwS77g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
