--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fkNavbar">
     <a class="navbar-brand" href="index.html">
       <img
@@ -159,7 +159,7 @@
             alias.</p>
           <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize">learn more</a>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 my-4 mb-md-0">
           <img src="./assets/images/laptop.png" class="img-fluid" alt="laptop image" title="laptop image">
         </div>
       </div>
@@ -211,6 +211,42 @@
           <a href="https://source.unsplash.com/random/?city/560*560" class="img-fluid" data-lightbox="imgGallary">
             <img src="https://source.unsplash.com/random/?city/560*560" alt="city" title="city">
           </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="newsInfo py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h3 class="text-capitalize">signup for our newsletter</h3>
+          <p class="py-4">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae at, eius, deleniti quas impedit labore
+            nulla corporis earum aspernatur magni voluptatum fuga doloremque illum quo. Neque eius quia laboriosam
+            vitae?
+          </p>
+          <form class="form-inline justify-content-center mainForm">
+            <div class="form-group mb-2">
+              <label for="staticEmail2" class="sr-only">Email</label>
+              <input type="text" class="form-control" id="staticEmail2" value="email@example.com">
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="inputPassword2" class="sr-only">Password</label>
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-outline-primary mb-2">Confirm identity</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="theUltimateCoders py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h5 class="text-capitalize">the ultimate coders</h5>
         </div>
       </div>
     </div>
