--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/images/image1.jpg" class="d-block w-100" alt="image1" title="image1">
+          <img src="./assets/images/image7.jpg" class="d-block w-100" alt="image1" title="image1">
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">first slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
@@ -235,7 +235,7 @@
               <label for="inputPassword2" class="sr-only">Password</label>
               <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-outline-primary mb-2">Confirm identity</button>
+            <button type="submit" class="btn btn-outline-primary mb-2">Sign in</button>
           </form>
         </div>
       </div>
