--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fkNavbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar">
     <a class="navbar-brand" href="index.html">
       <img
         src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg"
@@ -67,11 +67,11 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/images/image9.jpg" class="d-block w-100" alt="image9" title="image9">
+          <img src="./assets/images/image8.jpg" class="d-block w-100" alt="image9" title="image9">
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">first slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize">sign up now</a>
+            <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
@@ -79,15 +79,15 @@
           <div class="carousel-caption d-none d-md-block text-center">
             <h5 class="text-capitalize display-3">second slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-primary btn-lg text-capitalize">sign up now</a>
+            <a href="javascript:;" class="btn btn-outline-primary btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/images/image3.jpg" class="d-block w-100" alt="image3" title="image3">
+          <img src="/assets/images/image7.jpg" class="d-block w-100" alt="image3" title="image3">
           <div class="carousel-caption d-none d-md-block text-left">
             <h5 class="text-capitalize display-3">third slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize">sign up now</a>
+            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
       </div>
@@ -229,7 +229,7 @@
           <form class="form-inline justify-content-center mainForm">
             <div class="form-group mb-2">
               <label for="staticEmail2" class="sr-only">Email</label>
-              <input type="text" class="form-control" id="staticEmail2" value="email@example.com">
+              <input type="text" class="form-control" id="staticEmail2" placeholder="email@example.com">
             </div>
             <div class="form-group mx-sm-3 mb-2">
               <label for="inputPassword2" class="sr-only">Password</label>
@@ -246,7 +246,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h5 class="text-capitalize">the ultimate coders</h5>
+          <h2 class="text-capitalize">the ultimate coders</h2>
         </div>
       </div>
     </div>
