--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/images/image8.jpg" class="d-block w-100" alt="image9" title="image9">
+          <img src="./assets/images/city1.jpg" class="d-block w-100" alt="image9" title="image9">
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">first slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
