--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <li data-target="#homePageSlider" data-slide-to="0" class="active"></li>
         <li data-target="#homePageSlider" data-slide-to="1"></li>
         <li data-target="#homePageSlider" data-slide-to="2"></li>
+        <li data-target="#homePageSlider" data-slide-to="3"></li>
+        <li data-target="#homePageSlider" data-slide-to="4"></li>
+        <li data-target="#homePageSlider" data-slide-to="5"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -86,6 +89,30 @@
           <img src="/assets/images/image7.jpg" class="d-block w-100" alt="image3" title="image3">
           <div class="carousel-caption d-none d-md-block text-left">
             <h5 class="text-capitalize display-3">third slide label</h5>
+            <p class="my-3">Some representative placeholder content for the first slide.</p>
+            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/image1.jpg" class="d-block w-100" alt="image3" title="image3">
+          <div class="carousel-caption d-none d-md-block text-right">
+            <h5 class="text-capitalize display-3">Fourth slide label</h5>
+            <p class="my-3">Some representative placeholder content for the first slide.</p>
+            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/image4.jpg" class="d-block w-100" alt="image3" title="image3">
+          <div class="carousel-caption d-none d-md-block text-center">
+            <h5 class="text-capitalize display-3">fifth slide label</h5>
+            <p class="my-3">Some representative placeholder content for the first slide.</p>
+            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/assets/images/image5.jpg" class="d-block w-100" alt="image3" title="image3">
+          <div class="carousel-caption d-none d-md-block text-right">
+            <h5 class="text-capitalize display-3">sixth slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
             <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
