--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">first slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-danger btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-danger btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
@@ -82,7 +82,7 @@
           <div class="carousel-caption d-none d-md-block text-center">
             <h5 class="text-capitalize display-3">second slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-primary btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-primary btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
@@ -90,31 +90,31 @@
           <div class="carousel-caption d-none d-md-block text-left">
             <h5 class="text-capitalize display-3">third slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-success btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/images/image1.jpg" class="d-block w-100" alt="image3" title="image3">
+          <img src="/assets/images/n1 (10).jpg" class="d-block w-100" alt="image3" title="image3">
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">Fourth slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-danger btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/images/image4.jpg" class="d-block w-100" alt="image3" title="image3">
+          <img src="/assets/images/n1 (1).jpg" class="d-block w-100" alt="image3" title="image3">
           <div class="carousel-caption d-none d-md-block text-center">
             <h5 class="text-capitalize display-3">fifth slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-primary btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/assets/images/image5.jpg" class="d-block w-100" alt="image3" title="image3">
+          <img src="/assets/images/n1 (4).jpg" class="d-block w-100" alt="image3" title="image3">
           <div class="carousel-caption d-none d-md-block text-right">
             <h5 class="text-capitalize display-3">sixth slide label</h5>
             <p class="my-3">Some representative placeholder content for the first slide.</p>
-            <a href="javascript:;" class="btn btn-outline-success btn-lg text-capitalize"><strong>sign up now</strong></a>
+            <a href="javascript:;" class="btn btn-success btn-lg text-capitalize"><strong>sign up now</strong></a>
           </div>
         </div>
       </div>
