--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col-12 text-center text-white">
           <h3 class="text-capitalize">are you ready to get started interviews</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora expedita repudiandae itaque minima
+          <p class="py-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora expedita repudiandae itaque minima
             architecto perferendis harum ipsum numquam ut? Exercitationem eius soluta doloribus facilis eligendi nulla,
             nesciunt delectus distinctio ipsa!</p>
         </div>
