work on aboutus

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar p-0">
     <a class="navbar-brand" href="index.html">
       <img
         src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg"
@@ -41,16 +41,16 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">about</a>
+          <a class="nav-link" href="aboutus.html">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">service</a>
+          <a class="nav-link" href="services.html">service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">blogs</a>
+          <a class="nav-link" href="blogs.html">blogs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">contact us</a>
+          <a class="nav-link" href="contactus.html">contact us</a>
         </li>
       </ul>
     </div>
