--- a/aboutus.html
+++ b/aboutus.html
@@ -6,16 +6,20 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
-        integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Bootstrap 4</title>
@@ -161,28 +165,126 @@
 
     <section class="feedbackInfo py-5 bg-dark">
         <div class="container">
-            <div class="row text-center text-white text-capitalize">
+            <div class="row text-center text-white text-capitalize mb-5">
                 <div class="col-12">
                     <h3>testimonials</h3>
                 </div>
             </div>
-            <div class="row">
-              <div class="col-12">
-                <div class="owl-carousel owl-theme" id="testimonialsCarousel">
-                    <div class="item"><h4>1</h4></div>
-                    <div class="item"><h4>2</h4></div>
-                    <div class="item"><h4>3</h4></div>
-                    <div class="item"><h4>4</h4></div>
-                    <div class="item"><h4>5</h4></div>
-                    <div class="item"><h4>6</h4></div>
-                    <div class="item"><h4>7</h4></div>
-                    <div class="item"><h4>8</h4></div>
-                    <div class="item"><h4>9</h4></div>
-                    <div class="item"><h4>10</h4></div>
-                    <div class="item"><h4>11</h4></div>
-                    <div class="item"><h4>12</h4></div>
+            <div class="row text-white">
+                <div class="col-12">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person1.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jhon doe, company one</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person2.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jon doe, company two</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person3.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">james doe, company three</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person4.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jen doe, company four</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person1.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jhon doe, company one</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person2.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jon doe, company two</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person3.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">james doe, company three</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person4.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jen doe, company four</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person1.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jhon doe, company one</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person2.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jon doe, company two</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person3.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">james doe, company three</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        <div class="item">
+                            <figure>
+                                <img src="./assets/images/person4.jpg" class="rounded-circle" alt="owl-theme" title="owl-carousel">
+                                <figcaption>
+                                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fuga nemo unde, fugiat modi rem corporis maiores quasi ea mollitia?</p>
+                                  <h6 class="font-weight-bold text-capitalize m-0">jen doe, company four</h6>
+                                </figcaption>
+                              </figure>
+                        </div>
+                        
+                        
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
     </section>
@@ -210,9 +312,15 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js"
-        integrity="sha512-U9dKDqsXAE11UA9kZ0XKFyZ2gQCj+3AwZdBMni7yXSvWqLFEj8C1s7wRmWl9iyij8d5zb4wm56j4z/JVEwS77g=="
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
