--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 py-5 text-center">
-          <a href="javascript:;">
-            <i class="fa-solid fa-play fa-3x py-3 text-white"></i>
+          <a href="https://www.youtube.com/@TheUltimateCoders">
+            <i class="fa-brands fa-youtube fa-3x mb-3 text-danger"></i>
           </a>
           <h3 class="text-capitalize text-white">are you ready to get started interviews</h3>
         </div>
