--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar p-0">
+  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar">
     <a class="navbar-brand" href="index.html">
       <img
         src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg"
@@ -41,16 +41,16 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutus.html">about</a>
+          <a class="nav-link" href="#">about</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="services.html">service</a>
+          <a class="nav-link" href="#">service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blogs.html">blogs</a>
+          <a class="nav-link" href="#">blogs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contactus.html">contact us</a>
+          <a class="nav-link" href="#">contact us</a>
         </li>
       </ul>
     </div>
@@ -197,8 +197,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12 py-5 text-center">
-          <a href="javascript:;">
-            <i class="fa-solid fa-play fa-3x py-3 text-white"></i>
+          <a href="https://www.youtube.com/@TheUltimateCoders">
+            <i class="fa-brands fa-youtube fa-3x mb-3 text-danger"></i>
           </a>
           <h3 class="text-capitalize text-white">are you ready to get started interviews</h3>
         </div>
