--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 py-5 text-center">
-          <a href="https://www.youtube.com/@TheUltimateCoders">
+          <a href="https://www.youtube.com/@TheUltimateCoders" target="_blank">
             <i class="fa-brands fa-youtube fa-3x mb-3 text-danger"></i>
           </a>
           <h3 class="text-capitalize text-white">are you ready to get started interviews</h3>
