--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fkNavbar p-0">
     <a class="navbar-brand" href="index.html">
       <img
         src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg"
